# katipo

./: .gitignore  .gitmodules  README.md
apps/basicServer/: Controller.cpp
apps/basicServer/scripts/: code.tui
apps/katipoClient/: CMakeLists.txt  Controller.cpp  Controller.h  build.sh  katipoClient.filters  katipoClient.sln  katipoClient.vcxproj
apps/katipoClient/katipoClient.xcodeproj/: project.pbxproj
apps/katipoClient/mac/katipoClient.xcodeproj/: project.pbxproj
apps/katipoClient/scripts/: code.tui
apps/katipoHost/: CMakeLists.txt  Controller.cpp  Controller.h  build.sh  katipoHost.filters  katipoHost.sln  katipoHost.vcxproj  main.cpp
apps/katipoHost/katipoHost.xcodeproj/: project.pbxproj
apps/katipoHost/scripts/: code.tui
apps/katipoTracker/: CMakeLists.txt  Controller.cpp  Controller.h  build.sh  katipoTracker.filters  katipoTracker.sln  katipoTracker.vcxproj  main.cpp
apps/katipoTracker/katipoTracker.xcodeproj/: project.pbxproj
apps/katipoTracker/scripts/: code.tui
core/: ClientHttpInterface.cpp  ClientHttpInterface.h  ClientNetInterface.cpp  ClientNetInterface.h  Database.cpp  Database.h  DatabaseEnvironment.cpp  DatabaseEnvironment.h  MJVersion.h  NetConstants.h  NetServerClient.cpp  NetServerClient.h  Server.cpp  Server.h  ServerNetInterface.cpp  ServerNetInterface.h  ThreadSafeQueue.h  Timer.cpp  Timer.h
linux/: buildAll.sh
linux/katipoTracker/: CMakeLists.txt  build.sh
mac/katipoClient/: main.cpp
mac/katipoHost.xcodeproj/: project.pbxproj
mac/katipoTracker/: main.cpp
mac/katipoTracker.xcodeproj/: project.pbxproj
